--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,37 @@
    display: grid;
    place-items: center;
 }
+
+.card-hover {
+   transition: all 0.2s ease-out;
+}
+
+.card-hover:hover {
+   transform: scale(1.015);
+}
+
+@keyframes fade-in {
+   from {
+      opacity: 0;
+   }
+   to {
+      opacity: 1;
+   }
+}
+
+@keyframes fade-out {
+   from {
+      opacity: 1;
+   }
+   to {
+      opacity: 0;
+   }
+}
+
+.fade-in {
+   animation: fade-in 0.4s ease-in;
+}
+
+.fade-out {
+   animation: fade-out 0.5s ease-in;
+}
